Fixing bug where .circle was above .btn (z-index)

--- a/frontendMentor/space-tourism/src/style/global.css
+++ b/frontendMentor/space-tourism/src/style/global.css
@@ -38,7 +38,7 @@
     @apply text-heading-4 sm:text-[20px] font-bellefair uppercase bg-white text-black rounded-full size-[274px] md:size-[242px] sm:size-[150px] flex justify-center items-center relative
 }
 .btn .circle {
-    @apply bg-[#979797] size-[274px] md:size-[242px] sm:size-[150px] rounded-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 pointer-events-none
+    @apply bg-white bg-opacity-15 size-[274px] md:size-[242px] sm:size-[150px] rounded-full absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 pointer-events-none -z-10
 }
 .btn:hover .circle {
     @apply size-[450px] md:size-[400px] sm:size-[250px]
